fix valign of th in table view

--- a/src/styles/_view_table.scss
+++ b/src/styles/_view_table.scss
@@ -7,6 +7,7 @@
     position: sticky;
     top: -1px;
     background: white;
+    vertical-align: top;
 
     &[data-sort] {
       cursor: pointer;
